feat: integrate system contacts management, add phone contact infrastructure, and rename app to SOA Mesh